# summer-of-nix

./: .gitignore  README.md  TEAM.md  admin-manual.md  contributions.md  facilitators.md  flake.nix  index.md  information-architecture.md  participants.md  project-assessment-checklist.md  project-management-workflow.md  report.md  stipends.md  template.latex
admin/: .envrc  .gitignore  README.md  default.nix  flake.nix  pyproject.toml  shell.nix
admin/automation/: .envrc  .gitignore  README.md  cli.py  gh.py  ghkit.py  process.py  process.sh  shell.nix  sync.py  utils.py
admin/automation/npins/: sources.json
admin/automation/sync/: export-project-data.py  ghkit.py  models_dashboard.py  models_notion.py  process.py  sync-projects.py  sync.py
admin/nix/: lib.nix
admin/nix/modules/: apps.nix  devshells.nix  infra.nix  packages.nix
admin/npins/: sources.json
admin/scripts/: README.md  create-migration-issues.sh  create-triage-issues.sh  export_project_data.py  extract_project_data.py  extract_project_metadata.py  extract_survey_results.py  sync_issues.py  sync_project_to_notion.py  sync_projects.py
admin/scripts/common/: ghkit.py  utils.py
admin/scripts/common/models/: __init__.py  dashboard.py  notion.py
admin/scripts/lib/: ghkit.py  utils.py
admin/scripts/lib/models/: dashboard.py  deliverables.py
admin/scripts/sync-projects/: README.md  export-project-data.py
admin/scripts/sync_projects/: README.md  export_project_data.py  sync_projects.py
admin/scripts/tests/: .gitignore  test_github_api.py
admin/sync-projects/: sync-projects.py
(+27 files in other folders)
